# plasma-activities

./: .kde-ci.yml  CMakeLists.txt  metainfo.yaml
autotests/core/: CMakeLists.txt  CleanOnlineTest.cpp  OfflineTest.cpp  QFlatSetTest.cpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp  utils.h
src/common/dbus/: org.kde.ActivityManager.Activities.xml
src/imports/: CMakeLists.txt  activityinfo.h  activitymodel.cpp  activitymodel.h  plasmaactivitiesqml.qdoc  plasmaactivitiesqml.qdocconf
src/lib/: CMakeLists.txt  activitiescache_p.cpp  activitiescache_p.h  activitiesmodel.cpp  activitiesmodel.h  activitiesmodel_p.h  consumer.cpp  consumer.h  controller.cpp  controller.h  info.cpp  info.h  info_p.h  manager_p.cpp  manager_p.h  plasmaactivities-index.qdoc  plasmaactivities.qdoc  plasmaactivities.qdocconf  resourceinstance.h  version.h
src/utils/: continue_with.h  qflatset.h
tests/: CMakeLists.txt
